Add PMD analysis to the build process
Former-commit-id: 261ced81d54f02ae451f93cd65c6c9dd643a96e8